--- a/src/index.css
+++ b/src/index.css
@@ -16,8 +16,8 @@ html {
 body {
   font-family: 'Inter', sans-serif;
   line-height: 1.6;
-  color: #374151;
-  background-color: #f9fafb;
+  color: #e5e7eb;
+  background-color: #0f172a;
 }
 
 .dark body {
